# mingleVision

./: README.md  render.yaml
mingleVision/: db.sqlite3  manage.py  pyproject.toml
mingleVision/home/: admin.py  models.py  urls.py  views.py
mingleVision/home/migrations/: 0001_initial.py  0002_alter_room_room_name.py
mingleVision/mingleVision/: asgi.py  settings.py  urls.py  wsgi.py
mingleVision/static/: README.md
mingleVision/static/js/: alert.js  header.js  lobby.js  room.js  room_rtc.js  room_rtm.js
mingleVision/static/styles/: alert.css  lobby.css  main.css  room.css  style.css
mingleVision/templates/: deleteRoom.html  header.html  home.html  join.html  lobby.html  login.html  register.html  reset_password.html  room.html  user_rooms.html
