[tool.poetry]
name = "minglevision"
version = "0.1.0"
description = ""
authors = ["Krish-Na-Pal <109763124+Krish-Na-Pal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
